--- a/AvaliaçãoEly.ipynb
+++ b/AvaliaçãoEly.ipynb
@@ -2,111 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    Result_of_Treatment\n",
-      "48                    1\n",
-      "80                    1\n",
-      "54                    1\n",
-      "73                    1\n",
-      "79                    0\n",
-      "82                    0\n",
-      "3                     1\n",
-      "62                    1\n",
-      "75                    1\n",
-      "27                    0\n",
-      "18                    1\n",
-      "50                    1\n",
-      "51                    1\n",
-      "74                    1\n",
-      "59                    1\n",
-      "55                    1\n",
-      "4                     1\n",
-      "15                    1\n",
-      "17                    1\n",
-      "40                    1\n",
-      "38                    1\n",
-      "5                     1\n",
-      "81                    1\n",
-      "68                    1\n",
-      "0                     1\n",
-      "34                    1\n",
-      "28                    0\n",
-      "11                    1\n",
-      "35                    0\n",
-      "23                    1\n",
-      "..                  ...\n",
-      "32                    1\n",
-      "76                    1\n",
-      "14                    1\n",
-      "85                    1\n",
-      "19                    1\n",
-      "29                    1\n",
-      "49                    0\n",
-      "87                    0\n",
-      "88                    0\n",
-      "69                    0\n",
-      "20                    1\n",
-      "84                    1\n",
-      "72                    0\n",
-      "25                    1\n",
-      "37                    1\n",
-      "46                    1\n",
-      "39                    0\n",
-      "65                    1\n",
-      "58                    0\n",
-      "12                    0\n",
-      "70                    1\n",
-      "36                    0\n",
-      "21                    1\n",
-      "83                    1\n",
-      "9                     0\n",
-      "86                    1\n",
-      "67                    1\n",
-      "64                    1\n",
-      "47                    1\n",
-      "44                    1\n",
-      "\n",
-      "[67 rows x 1 columns]\n",
-      "    Result_of_Treatment\n",
-      "2                     1\n",
-      "13                    1\n",
-      "53                    1\n",
-      "41                    1\n",
-      "66                    0\n",
-      "30                    1\n",
-      "45                    1\n",
-      "43                    0\n",
-      "78                    1\n",
-      "89                    1\n",
-      "7                     1\n",
-      "26                    1\n",
-      "33                    1\n",
-      "63                    1\n",
-      "8                     1\n",
-      "16                    1\n",
-      "24                    1\n",
-      "56                    1\n",
-      "77                    1\n",
-      "42                    0\n",
-      "22                    0\n",
-      "6                     1\n",
-      "61                    1\n",
-      "0.782608695652174\n"
+     "ename": "ValueError",
+     "evalue": "Expected 2D array, got 1D array instead:\narray=[array([ 0,  2,  6, 12, 14, 15, 16, 17, 18, 19, 23, 24, 26, 28, 33, 35, 36,\n       37, 38, 41, 43, 46, 48, 49, 50, 51, 52, 53, 54, 56, 58, 61, 62, 63,\n       65, 67, 69, 70, 72, 74, 78, 80, 85, 86])\n array([ 1,  3,  4,  5,  7,  8,  9, 10, 11, 13, 20, 21, 22, 25, 27, 29, 30,\n       31, 32, 34, 39, 40, 42, 44, 45, 47, 55, 57, 59, 60, 64, 66, 68, 71,\n       73, 75, 76, 77, 79, 81, 82, 83, 84, 87, 88, 89])].\nReshape your data either using array.reshape(-1, 1) if your data has a single feature or array.reshape(1, -1) if it contains a single sample.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-46-141a608aaa5e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[1;31m#Teste Análise Discriminatória Linear (maior score)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[0mclf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mLinearDiscriminantAnalysis\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 28\u001b[1;33m \u001b[0mclf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_treino\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_treino\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     29\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_teste\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_teste\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\sklearn\\discriminant_analysis.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, X, y)\u001b[0m\n\u001b[0;32m    427\u001b[0m             \u001b[0mTarget\u001b[0m \u001b[0mvalues\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    428\u001b[0m         \"\"\"\n\u001b[1;32m--> 429\u001b[1;33m         \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcheck_X_y\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mensure_min_samples\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mestimator\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    430\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclasses_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0munique_labels\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    431\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36mcheck_X_y\u001b[1;34m(X, y, accept_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, multi_output, ensure_min_samples, ensure_min_features, y_numeric, warn_on_dtype, estimator)\u001b[0m\n\u001b[0;32m    571\u001b[0m     X = check_array(X, accept_sparse, dtype, order, copy, force_all_finite,\n\u001b[0;32m    572\u001b[0m                     \u001b[0mensure_2d\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mallow_nd\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mensure_min_samples\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 573\u001b[1;33m                     ensure_min_features, warn_on_dtype, estimator)\n\u001b[0m\u001b[0;32m    574\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mmulti_output\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    575\u001b[0m         y = check_array(y, 'csr', force_all_finite=True, ensure_2d=False,\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[1;34m(array, accept_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[0;32m    439\u001b[0m                     \u001b[1;34m\"Reshape your data either using array.reshape(-1, 1) if \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    440\u001b[0m                     \u001b[1;34m\"your data has a single feature or array.reshape(1, -1) \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 441\u001b[1;33m                     \"if it contains a single sample.\".format(array))\n\u001b[0m\u001b[0;32m    442\u001b[0m             \u001b[0marray\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0matleast_2d\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    443\u001b[0m             \u001b[1;31m# To ensure that array flags are maintained\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Expected 2D array, got 1D array instead:\narray=[array([ 0,  2,  6, 12, 14, 15, 16, 17, 18, 19, 23, 24, 26, 28, 33, 35, 36,\n       37, 38, 41, 43, 46, 48, 49, 50, 51, 52, 53, 54, 56, 58, 61, 62, 63,\n       65, 67, 69, 70, 72, 74, 78, 80, 85, 86])\n array([ 1,  3,  4,  5,  7,  8,  9, 10, 11, 13, 20, 21, 22, 25, 27, 29, 30,\n       31, 32, 34, 39, 40, 42, 44, 45, 47, 55, 57, 59, 60, 64, 66, 68, 71,\n       73, 75, 76, 77, 79, 81, 82, 83, 84, 87, 88, 89])].\nReshape your data either using array.reshape(-1, 1) if your data has a single feature or array.reshape(1, -1) if it contains a single sample."
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis\n",
+    "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis, LinearDiscriminantAnalysis\n",
     "import numpy as np\n",
+    "from sklearn.ensemble import RandomForestClassifier, BaggingClassifier\n",
     "from sklearn.model_selection import cross_val_score, train_test_split\n",
     "from sklearn.linear_model import SGDClassifier\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
+    "\n",
+    "#Nome: Imunoterapia\n",
+    "#Esse dataset fala sobre o resultado do tratamento de verrugas utilizando Imunoterapia\n",
+    "#Possui 8 atributos\n",
     "\n",
     "\n",
     "df = pd.read_excel('Immunotherapy.xlsx')\n",
@@ -114,15 +40,72 @@
     "x = df[['sex','age','Time','Number_of_Warts', 'Type','Area','induration_diameter']]\n",
     "y = df[['Result_of_Treatment']]\n",
     "\n",
-    "x_treino, x_teste, y_treino, y_teste = train_test_split(x, y, test_size=0.25, random_state=0)\n",
+    "#x_treino, x_teste, y_treino, y_teste = train_test_split(x, y, test_size=0.25, random_state=0)\n",
     "\n",
-    "clf = QuadraticDiscriminantAnalysis()\n",
+    "rskf = RepeatedStratifiedKFold(n_splits=2, n_repeats=2,\n",
+    "    random_state=36851234)\n",
+    "x_treino, x_teste, y_treino, y_teste = rskf.split(x, y)\n",
+    "\n",
+    "#Teste Análise Discriminatória Linear (maior score)\n",
+    "clf = LinearDiscriminantAnalysis()\n",
+    "clf.fit(x_treino, y_treino)\n",
+    "\n",
+    "print(clf.score(x_teste, y_teste))\n",
+    "\n",
+    "print(pd.crosstab(y_teste.values.ravel(), clf.predict(x_teste), rownames=['Real'], colnames=['Predito T'], margins=True))\n",
+    "\n",
+    "#Teste Análise Discriminatória Quadrática\n",
+    "'''clf = QuadraticDiscriminantAnalysis()\n",
     "clf.fit(x_treino, y_treino.values.ravel())\n",
     "\n",
-    "print(y_treino)\n",
-    "print(y_teste)\n",
-    "print(clf.score(x_teste, y_teste))"
+    "print(clf.score(x_teste, y_teste))\n",
+    "\n",
+    "print(pd.crosstab(y_teste.values.ravel(), clf.predict(x_teste), rownames=['Real'], colnames=['Predito T'], margins=True))\n",
+    "\n",
+    "#Teste Floresta Randômica\n",
+    "clf = RandomForestClassifier()\n",
+    "clf.fit(x_treino, y_treino.values.ravel())\n",
+    "\n",
+    "print(clf.score(x_teste, y_teste))\n",
+    "\n",
+    "print(pd.crosstab(y_teste.values.ravel(), clf.predict(x_teste), rownames=['Real'], colnames=['Predito T'], margins=True))\n",
+    "\n",
+    "#Teste Bagging\n",
+    "clf = BaggingClassifier()\n",
+    "clf.fit(x_treino, y_treino.values.ravel())\n",
+    "\n",
+    "print(clf.score(x_teste, y_teste))\n",
+    "\n",
+    "print(pd.crosstab(y_teste.values.ravel(), clf.predict(x_teste), rownames=['Real'], colnames=['Predito T'], margins=True))'''"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
