--- a/AvaliaçãoEly.ipynb
+++ b/AvaliaçãoEly.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -56,33 +56,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8260869565217391\n",
+      "Score: 0.8260869565217391\n",
       "Predito T   1  All\n",
       "Real              \n",
       "0           4    4\n",
       "1          19   19\n",
       "All        23   23\n",
       "-----------------------------------------------------------------------------------------------------------\n",
-      "0.782608695652174\n",
+      "Score: 0.782608695652174\n",
       "Predito T  0   1  All\n",
       "Real                 \n",
       "0          0   4    4\n",
       "1          1  18   19\n",
       "All        1  22   23\n",
       "-----------------------------------------------------------------------------------------------------------\n",
-      "0.7391304347826086\n",
-      "Predito T  0   1  All\n",
-      "Real                 \n",
-      "0          1   3    4\n",
-      "1          3  16   19\n",
-      "All        4  19   23\n",
-      "-----------------------------------------------------------------------------------------------------------\n",
-      "0.8260869565217391\n",
+      "Score: 0.8260869565217391\n",
       "Predito T  0   1  All\n",
       "Real                 \n",
       "0          1   3    4\n",
       "1          1  18   19\n",
       "All        2  21   23\n",
+      "-----------------------------------------------------------------------------------------------------------\n",
+      "Score: 0.8260869565217391\n",
+      "Predito T  0   1  All\n",
+      "Real                 \n",
+      "0          2   2    4\n",
+      "1          2  17   19\n",
+      "All        4  19   23\n",
       "-----------------------------------------------------------------------------------------------------------\n"
      ]
     },
@@ -152,17 +152,17 @@
     {
      "data": {
       "text/plain": [
-       "{'whiskers': [<matplotlib.lines.Line2D at 0x25180462da0>,\n",
-       "  <matplotlib.lines.Line2D at 0x2518045e630>],\n",
-       " 'caps': [<matplotlib.lines.Line2D at 0x2518045ea58>,\n",
-       "  <matplotlib.lines.Line2D at 0x2518045ee80>],\n",
-       " 'boxes': [<matplotlib.lines.Line2D at 0x25180462c50>],\n",
-       " 'medians': [<matplotlib.lines.Line2D at 0x2518045ef60>],\n",
-       " 'fliers': [<matplotlib.lines.Line2D at 0x25180476710>],\n",
+       "{'whiskers': [<matplotlib.lines.Line2D at 0x251801ea828>,\n",
+       "  <matplotlib.lines.Line2D at 0x251801eac50>],\n",
+       " 'caps': [<matplotlib.lines.Line2D at 0x251801ead30>,\n",
+       "  <matplotlib.lines.Line2D at 0x251801f54e0>],\n",
+       " 'boxes': [<matplotlib.lines.Line2D at 0x251801ea2b0>],\n",
+       " 'medians': [<matplotlib.lines.Line2D at 0x251801f5908>],\n",
+       " 'fliers': [<matplotlib.lines.Line2D at 0x251801f5d30>],\n",
        " 'means': []}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -188,6 +188,7 @@
     "from sklearn.model_selection import cross_val_score, train_test_split\n",
     "from sklearn.linear_model import SGDClassifier\n",
     "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import recall_score\n",
     "\n",
     "#Nome: Imunoterapia\n",
     "#Esse dataset fala sobre o resultado do tratamento de verrugas utilizando Imunoterapia\n",
@@ -230,7 +231,7 @@
     "\n",
     "clf.fit(x_treino, y_treino)\n",
     "\n",
-    "print(clf.score(x_teste, y_teste))\n",
+    "print('Score: '+ str(clf.score(x_teste, y_teste)))\n",
     "\n",
     "print(pd.crosstab(y_teste.values.ravel(), clf.predict(x_teste), rownames=['Real'], colnames=['Predito T'], margins=True))\n",
     "print('-----------------------------------------------------------------------------------------------------------')\n",
@@ -239,7 +240,7 @@
     "clf = QuadraticDiscriminantAnalysis()\n",
     "clf.fit(x_treino, y_treino.values.ravel())\n",
     "\n",
-    "print(clf.score(x_teste, y_teste))\n",
+    "print('Score: '+ str(clf.score(x_teste, y_teste)))\n",
     "\n",
     "print(pd.crosstab(y_teste.values.ravel(), clf.predict(x_teste), rownames=['Real'], colnames=['Predito T'], margins=True))\n",
     "print('-----------------------------------------------------------------------------------------------------------')\n",
@@ -248,7 +249,7 @@
     "clf = RandomForestClassifier()\n",
     "clf.fit(x_treino, y_treino.values.ravel())\n",
     "\n",
-    "print(clf.score(x_teste, y_teste))\n",
+    "print('Score: '+ str(clf.score(x_teste, y_teste)))\n",
     "\n",
     "print(pd.crosstab(y_teste.values.ravel(), clf.predict(x_teste), rownames=['Real'], colnames=['Predito T'], margins=True))\n",
     "print('-----------------------------------------------------------------------------------------------------------')\n",
@@ -257,7 +258,7 @@
     "clf = BaggingClassifier()\n",
     "clf.fit(x_treino, y_treino.values.ravel())\n",
     "\n",
-    "print(clf.score(x_teste, y_teste))\n",
+    "print('Score: '+ str(clf.score(x_teste, y_teste)))\n",
     "\n",
     "print(pd.crosstab(y_teste.values.ravel(), clf.predict(x_teste), rownames=['Real'], colnames=['Predito T'], margins=True))\n",
     "print('-----------------------------------------------------------------------------------------------------------')\n",
